--- a/src/escd/commandhandler/CMakeLists.txt
+++ b/src/escd/commandhandler/CMakeLists.txt
@@ -19,6 +19,7 @@ SET (SOURCED
     ${CMAKE_CURRENT_SOURCE_DIR}/gettransactionhandler.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/setaccountstatushandler.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/setnodestatushandler.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/unsetaccountstatushandler.cpp
     PARENT_SCOPE
     )
 
@@ -43,6 +44,7 @@ SET (HEADERSD
     ${CMAKE_CURRENT_SOURCE_DIR}/gettransactionhandler.h
     ${CMAKE_CURRENT_SOURCE_DIR}/setaccountstatushandler.h
     ${CMAKE_CURRENT_SOURCE_DIR}/setnodestatushandler.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/unsetaccountstatushandler.h
     PARENT_SCOPE
     )
 
