--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,5 +8,6 @@ test_hpx:
   - cmake -DCMAKE_INSTALL_PREFIX=/usr/local -DCMAKE_PROJECT_CONFIG=esc -DCMAKE_BUILD_TYPE=Debug /builds/proxy/hpx/src
   - make clean
   - make -j4
+  - export PYTHONPATH=/builds/proxy/hpx:$PYTHONPATH
   script:
   - pytest /builds/proxy/hpx/tests -s
