--- a/src/default_esc.h.in
+++ b/src/default_esc.h.in
@@ -7,6 +7,7 @@
 #define MAX_UNDO 0x8 /* maximum history of block undo files in blocks */
 #define MAX_MSGWAIT 0x2 /* start with 2 and change to 8: wait no more than 8s for a message */
 #define VOTE_DELAY 2 /*increase later (maybe monitor network delay)!!!*/
+#define VIP_MAX 7 /* maximum number of VIP servers */
 #define MIN_PEERS 8 /* keep at least 3 peers connected */
 #define MAX_PEERS 16 /* keep not more than 8 peers connected */
 #define VALIDATORS 8 /* number of validator threads */
@@ -18,14 +19,15 @@
 #define MAX_UNDO 0x800 /* maximum history of block undo files in blocks (20 days) */
 #define MAX_MSGWAIT 0x10 /* wait no more than 16s for a message */
 #define VOTE_DELAY 4 /*increase later (maybe monitor network delay)!!!*/
+#define VIP_MAX 63 /* maximum number of VIP servers */
 #define MIN_PEERS 8 /* keep at least 8 peers connected */
 #define MAX_PEERS 16 /* keep not more than 16 peers connected */
 #define VALIDATORS 8 /* number of validator threads */
 #define CLIENT_POOL 16	/* do not offer more threads that are used for network message validation */
 #define USER_MIN_AGE     (BLOCKSEC*10000L) /* wait at least 10000 blocks before deleting an account */
 #endif
-#define VIP_MAX 63 /* maximum number of VIP servers */
-#define TOTALMASS 0x4000000000000000L /* total balance (target) */
+
+#define TOTALMASS 3875820600000000000L /* total balance (target) */
 #define MAX_USERS 0x40000000L /* maximum number of users in a node (1G => size:16GB) */
 #define LOCK_TIME (BLOCKDIV*BLOCKSEC) /*time needed for lock to start; LOCK_TIME => allow withdrawal*/
 
