--- a/src/escd/commandhandler/CMakeLists.txt
+++ b/src/escd/commandhandler/CMakeLists.txt
@@ -21,6 +21,7 @@ SET (SOURCED
     ${CMAKE_CURRENT_SOURCE_DIR}/setnodestatushandler.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/unsetaccountstatushandler.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/unsetnodestatushandler.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/retrievefundshandler.cpp
     PARENT_SCOPE
     )
 
@@ -47,6 +48,7 @@ SET (HEADERSD
     ${CMAKE_CURRENT_SOURCE_DIR}/setnodestatushandler.h
     ${CMAKE_CURRENT_SOURCE_DIR}/unsetaccountstatushandler.h
     ${CMAKE_CURRENT_SOURCE_DIR}/unsetnodestatushandler.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/retrievefundshandler.h
     PARENT_SCOPE
     )
 
