#104 added commands TXSTYPE_NON and TXSTYPE_UOK

--- a/src/common/command/CMakeLists.txt
+++ b/src/common/command/CMakeLists.txt
@@ -17,6 +17,8 @@ SET (SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/getlog.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/gettransaction.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/connected.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/transactionaccepted.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/transactionfailed.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/setaccountstatus.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/setnodestatus.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/unsetaccountstatus.cpp
@@ -47,6 +49,8 @@ SET (HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/getlog.h
     ${CMAKE_CURRENT_SOURCE_DIR}/gettransaction.h
     ${CMAKE_CURRENT_SOURCE_DIR}/connected.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/transactionaccepted.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/transactionfailed.h
     ${CMAKE_CURRENT_SOURCE_DIR}/setaccountstatus.h
     ${CMAKE_CURRENT_SOURCE_DIR}/setnodestatus.h
     ${CMAKE_CURRENT_SOURCE_DIR}/unsetaccountstatus.h
