Adding HPX parameters.

--- a/src/default_hpx.h.in
+++ b/src/default_hpx.h.in
@@ -13,8 +13,8 @@
 #define CLIENT_POOL 16	/* do not offer more threads that are used for network message validation */
 #define USER_MIN_AGE     (BLOCKSEC*2)
 #else
-#define BLOCKSEC 0x400 /* block period in seconds (17min) */
-#define BLOCKDIV 0x400 /* number of blocks for dividend update (dividend period 10 days) */
+#define BLOCKSEC 0x200 /* block period in seconds (8.53 min) */
+#define BLOCKDIV 0x800 /* number of blocks for dividend update (dividend period 12.1 days) */
 #define MAX_UNDO 0x800 /* maximum history of block undo files in blocks (20 days) */
 #define MAX_MSGWAIT 0x10 /* wait no more than 16s for a message */
 #define VOTE_DELAY 4 /*increase later (maybe monitor network delay)!!!*/
@@ -48,8 +48,8 @@
 //#define PATHSHIFT 5
 
 #define SERVER_TYPE 1
-#define OFFICE_PORT "9091"
-#define SERVER_PORT "8081"
+#define OFFICE_PORT "8800"
+#define SERVER_PORT "9900"
 #ifdef DEBUG
 #define SERVER_DNSA "dev.hpx.adshares.net"
 #else
@@ -59,39 +59,38 @@
 
 #define USER_STAT_DELETED 0x1 /* account can be deleted and reused */
 
-#define TXS_MIN_FEE      (0x1000) /* minimum fee per transaction */
-#define TXS_DIV_FEE      (0x100000)  /* dividend fee collected every BLOCKDIV blocks ( *8_years=MIN_MASS ) */
-#define TXS_KEY_FEE      (0x1000) /* */
-#define TXS_BRO_FEE(x)   (0x1000  +0x10000*(x)) /* + len_fee (length) MAX_BLG_SIZE=1G */
-#define TXS_PUT_FEE(x)   (0x1000  +((x)>>13)) /* local wires fee (weight) (/8192) */ // 0.0244%
-#define TXS_LNG_FEE(x)   (         ((x)>>13)) /* additional remote wires fee (weight) */
-#define TXS_MPT_FEE(x)   (0x100   +((x)>>13)) /* + MIN_FEE !!! */
-#define TXS_GET_FEE      (0x100000) /* get initiation fee */
-#define TXS_GOK_FEE(x)   (         ((x)>>12)) /* get wire fee (allways remote) */ // 0.0122%
-#define TXS_USR_FEE      (0x100000) /* 0x0.001G only for remote applications, otherwise MIN_FEE */
-#define TXS_RUS_FEE      (100000000L) /* additional create user fee for remote applications */
+#define TXS_MIN_FEE      (0x10000) /* minimum fee per transaction 0.00006 G */
+#define TXS_DIV_FEE      (0x0)  /* dividend fee collected every BLOCKDIV blocks */
+#define TXS_KEY_FEE      (0x10000) /* change user key fee */
+#define TXS_BRO_FEE(x)   (0x10000  +0x1000*(x)) /* + len_fee (length) MAX_BLG_SIZE=1G */
+#define TXS_PUT_FEE(x)   (0x10000  +((x)>>13)) /* local wires fee (weight) (/8192) */ // 0.0122%
+#define TXS_LNG_FEE(x)   (          ((x)>>13)) /* additional remote wires fee (weight) */
+#define TXS_MPT_FEE(x)   (0x1000   +((x)>>13)) /* + MIN_FEE !!! */
+#define TXS_GET_FEE      (0x1000000) /* get initiation fee */
+#define TXS_GOK_FEE(x)   (          ((x)>>12)) /* get wire fee (allways remote) */ // 0.0244%
+#define TXS_USR_FEE      (0x10000000) /* 0x0.27G create user account fee */
+#define TXS_RUS_FEE      (0x0) /* additional create user fee for remote applications */
 #define TXS_SUS_FEE      (0x10000) /* 0x0.0001G */
 #define TXS_SBS_FEE      (0x10000) /* 0x0.0001G */
 #define TXS_UUS_FEE      (0x10000) /* 0x0.0001G */
 #define TXS_UBS_FEE      (0x10000) /* 0x0.0001G */
-#define TXS_SAV_FEE      (0x100000) /* 0x0.0001G */
-#define TXS_BNK_FEE      (0x10000000L) /* 0x0.1 G */
-#define TXS_BKY_FEE      (0x10000000L) /* 0x0.1 G */
-#define USER_MIN_MASS    (0x10000000L) /* 0x0.1 G minimum user account mass to send transaction */
-#define BANK_MIN_UMASS   (0x10000000L) /* 0x0.1G, minimum admin account mass to send transaction */
-#define BANK_MIN_TMASS   (0x1000000000L) /* 0x10G, if bank total mass below this value, bank can be taken over */
-#define BANK_MIN_MTIME   (0x200*BLOCKSEC) /* if no transaction in this period bank can be taken over */
+#define TXS_SAV_FEE      (0x1000000) /* 0x0.015G */
+#define TXS_BNK_FEE      (0x1000000000L) /* 68.7 G */
+#define TXS_BKY_FEE      (0x100000000L) /* 5 G */
+#define USER_MIN_MASS    (0x0) /* minimum user account mass to send transaction */
+#define BANK_MIN_UMASS   (0x0) /* minimum admin account mass to send transaction */
+#define BANK_MIN_TMASS   (0x0) /* if bank total mass below this value, bank can be taken over */
+#define BANK_MIN_MTIME   LOCK_TIME /* if no transaction in this period bank can be taken over */
 #define BANK_MAX         (0xffff)
-#define BANK_PROFIT(x)   ((x)/16) /* 1/16 of fees */
-#define BANK_USER_FEE(x) (0x1000 + ((BANK_PROFIT(((uint64_t)(x))*(TXS_DIV_FEE/BLOCKDIV)))>>2)) /* every block */
+#define BANK_PROFIT(x)   ((x)>>3) /* 1/8 of fees */
+#define BANK_USER_FEE(x) (0x0) /* every block */
 
 #define MESSAGE_FEE(x)  (0x1000 + (x)) /* fee for each bank message */
 #define MESSAGE_TOO_LONG 0x800000 /* 8MB */
 #define MESSAGE_LEN_OK   0x10000
 #define MESSAGE_TNUM_OK  0x1000
 #define MESSAGE_TNUM_MAX 0xFFF0
-#define MESSAGE_WAIT 5
-#define MESSAGE_TOO_OLD (60*60*24*7)
+#define MESSAGE_WAIT 5  /* wait at least 5 seconds after last message */
 #define MESSAGE_CHUNK    0x100000
 #define MESSAGE_MAXAGE 100 /* prefer blocks with all messages older than MAXAGE */
 
