--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ test_esc:
 
 
 pull_hpx:
+  script:
   - cd /builds/proxy/hpx
   - git remote add github git@github.com:EnterpriseServiceChain/esc.git
   - git push github develop:master
