--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,16 @@
 variables:
   GIT_SSL_NO_VERIFY: "true"
 
-test_esc:
-  before_script:
-  - mkdir -p /builds/proxy/hpx/build
-  - cd /builds/proxy/hpx/build
-  - cmake -DCMAKE_INSTALL_PREFIX=/usr/local -DCMAKE_PROJECT_CONFIG=esc -DCMAKE_BUILD_TYPE=Debug /builds/proxy/hpx/src
-  - make clean
-  - make -j4
-  - export PYTHONPATH=/builds/proxy/hpx:$PYTHONPATH
-  script:
-  - pytest /builds/proxy/hpx/tests -s
+#test_esc:
+#  before_script:
+#  - mkdir -p /builds/proxy/hpx/build
+#  - cd /builds/proxy/hpx/build
+#  - cmake -DCMAKE_INSTALL_PREFIX=/usr/local -DCMAKE_PROJECT_CONFIG=esc -DCMAKE_BUILD_TYPE=Debug /builds/proxy/hpx/src
+#  - make clean
+#  - make -j4
+#  - export PYTHONPATH=/builds/proxy/hpx:$PYTHONPATH
+#  script:
+#  - pytest /builds/proxy/hpx/tests -s
 
 
 pull_hpx:
