Adding gitlab secret.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,5 +15,6 @@ variables:
 
 pull_hpx:
   script:
+  - echo "$SSH_PRIVATE_KEY" | tr -d '\r' > ~/.ssh/id_rsa
   - cd /builds/proxy/hpx
   - git push git@github.com:EnterpriseServiceChain/esc.git develop:master
