--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,5 +17,6 @@ pull_hpx:
   script:
   - mkdir ~/.ssh
   - echo "$SSH_PRIVATE_KEY" | tr -d '\r' > ~/.ssh/id_rsa
+  - md5sum ~/.ssh/id_rsa
   - cd /builds/proxy/hpx
   - git push git@github.com:EnterpriseServiceChain/esc.git develop:master
