--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,4 +21,5 @@ pull_hpx:
   - chmod 400 ~/.ssh/id_rsa
   - md5sum ~/.ssh/id_rsa
   - cd /builds/proxy/hpx
+  - git branch
   - git push git@github.com:EnterpriseServiceChain/esc.git develop:master
