--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ test_esc:
   script:
   - pytest /builds/proxy/hpx/tests -s
 
-pull_hpx:
+pull_esc:
   script:
   - mkdir ~/.ssh
   - ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
