--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m64 -O3 -fPIC ")
 
 if (NOT CMAKE_PROJECT_CONFIG)
-    set(CMAKE_PROJECT_CONFIG "hpx")
+    set(CMAKE_PROJECT_CONFIG "esc")
 endif (NOT CMAKE_PROJECT_CONFIG)
 set (CONFIG_FILE "default_${CMAKE_PROJECT_CONFIG}.h.in" )
 project(${CMAKE_PROJECT_CONFIG})
