--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ variables:
 
 test_esc:
   before_script:
+  - ls -lrta /builds
   - mkdir -p /builds/proxy/esc/build
   - cd /builds/proxy/esc/build
   - cmake -DCMAKE_INSTALL_PREFIX=/usr/local -DCMAKE_PROJECT_CONFIG=esc -DCMAKE_BUILD_TYPE=Debug ../src
