--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,5 +24,15 @@ pull_esc:
   script:
   - git clone git@github.com:EnterpriseServiceChain/esc.git /builds/EnterpriseServiceChain/escprod
   - cd /builds/EnterpriseServiceChain/escprod
-  - git checkout /builds/EnterpriseServiceChain/esc src
+  - git remote add escdev /builds/EnterpriseServiceChain/esc
+  - git fetch escdev
+  - git checkout escdev src
+  - git checkout escdev external
+  - git checkout escdev .gitignore
+  - git checkout escdev README.md
+  - git checkout escdev docs/Whitepaper.pdf
+  - git checkout escdev docs/doxygen/Doxyfile
+  - git commit -m "Merge"
+  - git push
+
 #  - git push git@github.com:EnterpriseServiceChain/esc.git develop:master
