--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,12 +27,12 @@ pull_esc:
   - cd /builds/EnterpriseServiceChain/escprod
   - git remote add escdev /builds/EnterpriseServiceChain/esc
   - git fetch escdev
-  - git checkout escdev -- src
-  - git checkout escdev -- external
-  - git checkout escdev -- .gitignore
-  - git checkout escdev -- README.md
-  - git checkout escdev -- docs/Whitepaper.pdf
-  - git checkout escdev -- docs/doxygen/Doxyfile
+  - git checkout escdev/develop -- src
+  - git checkout escdev/develop -- external
+  - git checkout escdev/develop -- .gitignore
+  - git checkout escdev/develop -- README.md
+  - git checkout escdev/develop -- docs/Whitepaper.pdf
+  - git checkout escdev/develop -- docs/doxygen/Doxyfile
   - git commit -m "Merge"
   - git push
 
