#15 added tarCompressor class and Gtest for unittests

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -52,6 +52,7 @@ endif()
 
 message("** PROJECT CONFIG: " ${CMAKE_PROJECT_CONFIG} " **")
 configure_file(${CONFIG_FILE} ${CMAKE_SOURCE_DIR}/common/default.h)
+message("BUILD_TYPE: " ${CMAKE_BUILD_TYPE} )
 
 if(CMAKE_BUILD_TYPE MATCHES "Debug")
     add_definitions(-DDEBUG)
@@ -70,4 +71,9 @@ add_subdirectory(common)
 add_subdirectory(esc)
 add_subdirectory(escd)
 add_subdirectory(tools)
+IF (CMAKE_BUILD_TYPE MATCHES "Unittest")
+    MESSAGE("\n\n***UNITTESTS ENABLED***\n\n\n")
+    add_definitions(-DDEBUG)
+    add_subdirectory(unittest)
+ENDIF(CMAKE_BUILD_TYPE MATCHES "Unittest")
 
