Refactored get_blocks

--- a/src/common/command/CMakeLists.txt
+++ b/src/common/command/CMakeLists.txt
@@ -27,6 +27,7 @@ SET (SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/getsignatures.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/retrievefunds.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/getvipkeys.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/getblocks.cpp
     PARENT_SCOPE
     )
 
@@ -61,6 +62,7 @@ SET (HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/getsignatures.h
     ${CMAKE_CURRENT_SOURCE_DIR}/retrievefunds.h
     ${CMAKE_CURRENT_SOURCE_DIR}/getvipkeys.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/getblocks.h
     PARENT_SCOPE
     )
 
