--- a/src/common/helper/CMakeLists.txt
+++ b/src/common/helper/CMakeLists.txt
@@ -7,6 +7,9 @@ SET (SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/hlog.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/socket.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/signatures.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/vipkeys.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/block.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/serversheader.cpp
     PARENT_SCOPE
     )
 
@@ -20,5 +23,8 @@ SET (HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/hlog.h
     ${CMAKE_CURRENT_SOURCE_DIR}/txsname.h
     ${CMAKE_CURRENT_SOURCE_DIR}/signatures.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/vipkeys.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/block.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/serversheader.h
     PARENT_SCOPE
     )
