#15 added unittest for Helper::blocks, added FileName const methods to create path to file in block, added function to extract one file from arch

--- a/src/unittest/CMakeLists.txt
+++ b/src/unittest/CMakeLists.txt
@@ -1,7 +1,9 @@
 set (UNITTEST_APP unittest)
 
 SET (SRC_LIST
+    unittest.cpp
     compressor_test.cpp
+    blocks_helper_test.cpp
     )
 
 SET (HEADERS_LIST
